--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,29 @@ body {
 div {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.name {
+  text-align: center;
+  text-shadow: 2px 2px 5px gray;
+}
+
+.heading {
+  text-align: center;
+  text-shadow: 2px 2px 5px gray;
+}
+
+.image1 {
+  display: block;
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 5px solid #913328;
+}
+
+.paragraph {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-right: 500px;
+  margin-left: 500px;
+}
