--- a/css/styles.css
+++ b/css/styles.css
@@ -37,13 +37,24 @@ div {
 .column {
   width: 600px;
   float: left;
-  border-style: solid;
-  border-width: thick;
   border: 3px solid #913328;
   margin-top: 20px;
   margin-bottom: 30px;
   margin-right: 20px;
   margin-left: 120px;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: lightgrey;
+}
+
+.column2 {
+  width: 600px;
+  float: left;
+  border: 3px solid #913328;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
   padding: 20px;
   box-sizing: border-box;
   background-color: lightgrey;
